--- a/async.html
+++ b/async.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-
-    <script src="async.js"></script>
+    <script src="interval.js"></script>
+    <!-- <script src="async.js"></script> -->
 </body>
 </html>
