--- a/await.html
+++ b/await.html
@@ -6,7 +6,7 @@
     <title>Async Await Recap</title>
 </head>
 <body>
-    <button onclick="loadUser()">Fetch</button><button>Async Await</button><button>Arrow Async</button> <button>Async Try Catch</button>
+    <button onclick="loadUser()">Fetch</button><button onclick="loadUserAsync()">Async Await</button><button>Arrow Async</button> <button>Async Try Catch</button>
 
 
     <script src="await.js"></script>
